# Studies-Projects

./: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
algorithms_workshops/: practice.py  workshop_01_07.py
async-workshop/: main.py  pyproject.toml
avito-testing/: .env_example  Makefile  README.md  pyproject.toml
avito-testing/api/: app.py  data.py  models.py  service.py  validation.py
drf-site-practice/: .env-example  .gitignore  Dockerfile  compose-exmpl.yml  gunicorn-exmpl.py  pyproject.toml
drf-site-practice/drfsite/: settings.py  urls.py  views.py
drf-site-practice/drfsite/articles/: models.py  permissions.py
drf-site-practice/drfsite/articles/migrations/: 0001_initial.py
drf-site-practice/nginx/: drfsite.conf
drfsite/: settings.py  urls.py
drfsite/articles/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
drfsite/articles/migrations/: 0002_article_author.py
fastapi-course/: app1.py  app2.py  index.html
fastapi_course/: .env.example
fastapi_course/project_1/: pyproject.toml
fastapi_course/project_1/src/: database.py  logger.py  main.py  models.py  utils.py
flask-practice/: Makefile  app.py  app_13.py  app_old.py  db.py  flask_db.sqlite3-journal  pyproject.toml  sq_db.sql  user_login.py
flask-practice/templates/: about.html  base_layout.html  contact.html  homepage.html  index.html  login.html  not_found.html  profile.html  register.html
linux-admin/: bash_progs.md  basic_commands.md  calculator.sh  funcs.sh  gcd.sh  hello_linux.xml  my_first_script.sh  script_task1.sh  script_task2.sh  server_commands.md  t.txt  vim.md  while_script.sh
sqlalchemy_webinar/: .env_example  main.py  pyproject.toml
sqlalchemy_webinar/project/: database.py  utils.py
web-parsing/: .gitignore  adapters.py  exceptions.py  main.py  problem1.py  problem3.py  proxies.py  pyproject.toml  requests_get.py  sessions.py  status_codes.py
web-parsing/async_parcing/: aiohttp_retries.py  async_pagen.py  async_soup.py  example_main.py  problem1.py  problem2.py
web-parsing/asyncio/: aiohttp_exmpl.py  async_soup.py  example.py
web-parsing/bs4/: bs4_basics.py  csv.py  json.py  pagination.py  problem1.py  problem2.py  problem3.py  problem4.py  problem4_6.py  problem5.py  problem7.py  problems1_3.py  problems8_10.py  problems_ajax.py  problems_misc.py  problems_pagination.py  soup_methods.py  soup_object.py
web-parsing/requests/: problem2.py  problem4.py  requests_get.py  response_object.py
web-parsing/selenuim_wd/: actions.py  basics.py  cookies.py  locators.py  problems.py  scrolls.py  windows.py
