[project]
name = "studies"
version = "0.1.0"
description = "A collection of tutorials"
authors = [
    {name = "Helen Dobruk", email = "elena.dobruk@yandex.ru"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "python-dotenv>=1.1.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.11.4",
]
