[project]
name = "studies"
version = "0.1.0"
description = "A collection of tutorials"
authors = [
    {name = "Helen Dobruk", email = "elena.dobruk@yandex.ru"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "html5lib>=1.1",
    "lxml>=5.4.0",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.11.4",
]
