[project]
name = "studies"
version = "0.1.0"
description = "A collection of tutorials"
authors = [
    {name = "Helen Dobruk", email = "elena.dobruk@yandex.ru"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.9",
    "aiohttp-retry>=2.9.1",
    "aiohttp-socks>=0.10.1",
    "bs4>=0.0.2",
    "codetiming>=1.4.0",
    "fake-useragent>=2.2.0",
    "fastapi>=0.115.12",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "html5lib>=1.1",
    "lxml>=5.4.0",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "selenium>=4.33.0",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.3",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.11.4",
]
