[project]
name = "drfsite"
version = "0.1.0"
description = "A DRF blog for practice"
authors = [
    {name = "Helen Dobruk", email = "elena.dobruk@yandex.ru"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.7",
    "djangorestframework>=3.15.2",
    "djangorestframework-simplejwt>=5.5.0",
    "djoser>=2.3.1",
    "python-dotenv>=1.1.0",
]

[tool.uv]
dev-dependencies = [
    "flake8>=7.1.2",
    "ruff>=0.11.3",
]
